BUG#29186 Return error to client in the following condition:           1: Create a log file which is larger than 4G in 32-bit host.           2: Create a data file (tablespace) which is larger than 4G in 32-bit host.